# KernelForge

./: .gitignore  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md
.github/workflows/: release.yml
docs/: packaging.md  release-workflow.md
src-tauri/: Bundle.desktop  Cargo.toml  VERSION_CATALOG.md  tauri.conf.json
src-tauri/examples/: full_workflow.rs  generate_config.rs  kernel_version_demo.rs  list_versions.rs  simple_check.rs
src-tauri/src/: lib.rs
src-tauri/src/core/: bloat_removal.rs  build_plan.rs  config.rs  mod.rs  patches.rs  toolchain.rs  version.rs  version_catalog.rs
src-tauri/tests/: integration_test.rs  version_catalog_integration.rs
