[package]
name = "kernelforge"
version = "0.1.0"
description = "Linux kernel optimizer for gaming performance"
authors = ["KernelForge Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sysinfo = "0.23"
memmap2 = "0.6"

