[package]
name = "kernelforge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
thiserror = "1.0"

# Optional GUI dependencies
tauri = { version = "2.0", optional = true }
sysinfo = { version = "0.23", optional = true }
memmap2 = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
gui = ["tauri", "sysinfo", "memmap2"]
